Mon Sep 13 12:39:11 2004  Steve Huston  <shuston@riverace.com>

	* ace/DLL_Manager.cpp: Added explicit template instantiations for
	  Wed Sep  8 17:13:41 2004  Steve Huston  <shuston@riverace.com>

Mon Sep 13 06:50:46 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* bin/MakeProjectCreator/config/dslogadmin_serv.mpb:

	  Changed to inherit from svc_utils.

Mon Sep 13 12:02:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_static_order.lst:
          Added TAO/orbsvcs/orbsvcs/CosNotification_Skel

Mon Sep 13 10:42:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          When using the 8.0 compiler, disable certain warnings about padding

Mon Sep 13 09:57:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          The intel compiler on Itanium is called icc, not ecc anymore

Mon Sep 13 09:46:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Fixed compile error in VxWorks specific code

Mon Sep 13 09:44:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-icc-common.h:
          Added ACE_HAS_STD_TEMPLATE_CLASS_MEMBER_SPECIALIZATION

Mon Sep 13 09:31:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * configure.ac:
          Added ACE_CHECK_LACKS_HEADERS for wchar.h.

Mon Sep 13 09:06:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_static_order.lst:
          Added TAO/orbsvcs/orbsvcs/CosNaming_Serv to the list of projects
          to build first.

Sun Sep 12 17:20:39 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* bin/MakeProjectCreator/config/rteventlogadmin.mpb

          Update *.mpb files to reflect new libraries.

	* bin/MakeProjectCreator/config/dseventlogadmin.mpb
	* bin/MakeProjectCreator/config/dseventlogadmin_serv.mpb
	* bin/MakeProjectCreator/config/dseventlogadmin_skel.mpb